index.css
/* ... */
.custom-scrollbar:hover .custom-scrollbar-track {
    opacity: 1;
}

.custom-scrollbar-thumb {
    position: absolute;
    right: 2px;
    width: 8px;
    background: rgb(250, 250, 250, 0.1);
    border-radius: 4px;
    transition: background 0.3s ease,
    width 0.3s ease,
    right 0.3s ease;
    cursor: grab;
    min-height: 30px;
}

.custom-scrollbar-thumb:hover {
    background: rgb(250, 250, 250, 0.2);
    width: 10px;
    right: 1px;
}

.custom-scrollbar-thumb:active,
.custom-scrollbar-thumb.dragging {
    background: rgba(250, 250, 250, 0.2);
    cursor: grabbing;
}

/* endregion */

/* region Typography */

.hero-title {
    margin: 0;
    font-size: clamp(5rem, 9.8vw, 9.375rem);
    cursor: default;
}

.hero-subtitle {
    margin: 1rem 0 0 0;
    font-size: clamp(1.25rem, 3.15vw, 2.5rem);
    font-family: var(--font-primary);
    font-weight: 400;
    color: var(--secondary-white);
    line-height: normal;
    cursor: default;
}

.about-words {
    font-family: var(--font-heading);
    font-size: clamp(2.5rem, 6.5vw, 3.75rem);
    font-weight: 600;
    color: var(--primary-white);
    letter-spacing: 0.03em;
    line-height: normal;
    white-space: nowrap;
    margin: 0;
    word-spacing: clamp(25px, 8vw, 50px);
    cursor: default;
}

.about-header {
    margin: 0;
    width: 90vw;
    font-size: clamp(4.375rem, 7.9vw, 7.5rem);
    text-align: center;
}

.about-p {
    margin: 2rem 0 0 0;
    width: min(75vw, 71.875rem);
    font-size: clamp(1rem, 2vw, 1.875rem);
    text-align: justify;
    word-break: keep-all;
}

.section-header {
    margin: 0;
    width: 90vw;
    font-size: clamp(5rem, 12vw, 9.375rem);
    text-align: center;
}

.skills-header {
    font-size: clamp(5.625rem, 12vw, 9.375rem);
}

.skills-sub {
    margin: 0;
    padding-left: 3.125rem;
    width: 100%;
    font-size: clamp(3.75rem, 7.9vw, 6.25rem);
    font-weight: 300;
    text-align: start;
    transition: filter 0.3s ease-out;
}

/* endregion */

/* region Header & Nav */

#header {
    position: fixed;
    padding: 1.25rem 0;
    z-index: 3;
    width: 100vw;
    isolation: isolate;
}

#header.header-auto-hide {
    transition: opacity 0.5s ease;
}

#header.header-auto-hide.header-hidden {
    opacity: 0;
}

#header.blend-mode {
    mix-blend-mode: difference;
    transition: mix-blend-mode 0.3s ease;
}

.header-container {
    margin: 0 8vw;
    justify-content: space-between;
}

.header-logo {
    height: 6.25rem;
}

/* Nav */
.header-nav-list {
    display: flex;
    flex-direction: column;
    padding-right: 0.5rem;
    gap: 0.625rem;
}

.header-nav-item {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 0.32rem;
    transition: all 0.4s ease;
}

.header-nav-link {
    color: var(--primary-white);
    opacity: 0.7;
    transition: opacity 0.3s ease, mix-blend-mode 0.3s ease;
}

.header-nav-link:hover,
.active-nav {
    opacity: 1;
}

/* Nav arrows */
.nav-arrow-canvas {
    width: 30px;
    height: 10px;
    visibility: hidden;
    opacity: 0;
    transition: visibility 0.4s ease, opacity 0.4s ease;
}

.header-nav-item:hover .nav-arrow-canvas,
.header-nav-item .nav-arrow-canvas.active-icon {
    visibility: visible;
    opacity: 1;
}

.header-nav-item:hover:not(.active-nav-item) .nav-arrow-canvas {
    opacity: 0.6;
}

/* endregion */

/* region Hero Section */

#hero {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
}

#hero-three-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 110vh;
    z-index: 0;
    overflow: hidden;
}

#hero-three-container::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 80px;
    z-index: 2;
    background: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0) 0%,
        rgba(10, 10, 10, 0.8) 100%
    );
}

.hero-text-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    z-index: 1;
    text-align: center;
}

#skip-link {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 0.5rem;
    margin: 0;
    z-index: 2;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--secondary-white);
    text-decoration: none;
    cursor: default;
    order: -1;
}

.skip-text {
    margin: 0;
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.3s ease;
}

#skip-link:focus .skip-text {
    visibility: visible;
    opacity: 1;
}

.hero-arrow-canvas {
    width: 100px;
    height: 100px;
    opacity: 0.7;
    overflow: hidden;
}

/* endregion */

/* region About Section */

#about {
    height: 300vh;
    position: relative;
}

#about-scroll-container {
    position: relative;
    top: 80px;
    padding-top: 6em;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

#about-three-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
    opacity: 0;
    filter: blur(10px);
}

#about-three-container::before,
#about-three-container::after {
    content: "";
    position: absolute;
    left: 0;
    width: 100%;
    height: 150px;
    z-index: 2;
}

#about-three-container::before {
    top: 0;
    background: linear-gradient(
        to top,
        rgba(0, 0, 0, 0) 0%,
        var(--primary-black) 100%
    );
}

#about-three-container::after {
    bottom: 0;
    background: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0) 0%,
        var(--primary-black) 100%
    );
}

.words-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 3rem;
    z-index: 1;
}

.about-words * {
    will-change: transform, opacity;
}
/* ... */

